maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:4: error: identifier expected but 'while' found.
	while(!estSurBiscuit()) {
        ^Escaper:11: error: ':' expected but ';' found.
keepHandOnSideWall()
^